------------------------
WIP - WORK IN PROGRESS
------------------------
- More font coloring options.
- Added option to change the font size.
- Added coloring support for DialogNumeric window.
- Added Next Aired support.
- Added option to change font size of plot information.
- Added option to change font size of video/audio playback settings.

------------------------
Featherence v0.7.0 (xx-xx-16)
------------------------
- Added Krypton support.
- Added ScrollBar support to PVR Guide window.
- Added WINDOW_DIALOG_CMS_OSD_SETTINGS.

------------------------
Featherence v0.6.2 (xx-Sep-16)
------------------------
- Major bugs fix with touch buttons on some windows.
- Major update of system information window.
- Minor update of center menu / sub menu.
- Minor update of Kodi's settings window.

------------------------
Featherence v0.6.1 (02-Sep-16)
------------------------
- Added noification for unlocking a button with a password.
- Added option to always hide library updating progress dialog when watching a video.
- Added option to change button's colors overlay.
- Added option to color font of Focus and Unfocus widget labels.
- Added option to color font of Dialogs window title and content.
- Added option to color font of Virtual Keyboard title and text.
- Added option to color font of Top Information bar and Top Video Information bar.
- Added option to enlarge icon in Side List view.
- Added option to reset any single button to default state.
- Added option to toggle show widget label's background on/off.
- Added option to tweak maximum movies/tvshows widget items.
- Added option to tweak the fade time between different skin windows (useful for low-end hardware).
- Added option to change the transperancy level of the locking mark/icons.
- Added submenu and widget support for Favourite, Settings and power buttons.
- Added two news mouse icons.
- Major bug fix with addons who use TrakTV when it's show only "Episode No.".