@@ -895,6 +895,14 @@
 	 <posx>0</posx>
 	 <posy>30</posy>
    </include>
+   <include name="Control_Pos9" description="">
+     <width>784.4</width>
+   </include>
+   <include name="Control_Pos12" description="">
+     <width>784.4</width>
+	 <posx>-102</posx>
+	 <textoffsetx>20</textoffsetx>
+   </include>
    <include name="Control_Pos13" description="">
      <posx>0</posx>
 	 <posy>-552</posy>
