@@ -5,8 +5,6 @@ WIP - WORK IN PROGRESS
 - Added option to change the font size.
 - Added coloring support for DialogNumeric window.
 - Added Next Aired support.
-- Added option to change font size of plot information.
-- Added option to change font size of video/audio playback settings.
 
 ------------------------
 Featherence v0.7.0 (xx-xx-16)
@@ -18,6 +16,9 @@ Featherence v0.7.0 (xx-xx-16)
 ------------------------
 Featherence v0.6.2 (xx-Sep-16)
 ------------------------
+- Added option to change font size of plot information.
+- Added option to change size of video/audio playback settings.
+- Added option to lock up to 10 specific addons.
 - Major bugs fix with touch buttons on some windows.
 - Major update of system information window.
 - Minor update of center menu / sub menu.
